# curam-cer-ontology-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: agent-guide.md  architecture.md  mcp-server-guide.md  migration-checklist.md  ontology-design.md
docs/diagrams/: architecture-overview.md
examples/: basic_eligibility_check.py  batch_assessment.py  explain_decision.py  period_eligibility_check.py
ontology/: README.md  eligibility_core.ttl  medicaid_rules.ttl  snap_rules.ttl
src/curam_cer_agent/: __init__.py
src/curam_cer_agent/agent/: __init__.py  eligibility_agent.py  prompts.py
src/curam_cer_agent/mcp/: __init__.py  server.py  tools.py
src/curam_cer_agent/models/: __init__.py  decision.py  household.py  program.py
src/curam_cer_agent/ontology/: __init__.py  loader.py  reasoner.py  validator.py
src/curam_cer_agent/utils/: __init__.py  audit.py  config.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_cases.json
tests/integration/: test_eligibility_agent.py
tests/unit/: test_mcp_tools.py  test_models.py  test_ontology_loader.py  test_reasoner.py
